--- a/data collection/pdf_extract.ipynb
+++ b/data collection/pdf_extract.ipynb
@@ -1,21 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text Extraction from Speech PDFs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from PyPDF2 import PdfReader\n",
+    "import pandas as pd\n",
     "import os\n",
     "import re"
    ]
@@ -30,33 +29,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following function extracts information from two main formats, or ignores certain files if they don't match a given format. I deal with non-matching documents later on."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_data_from_pdf(fname):\n",
-    "    # print(fname)\n",
     "    record = {}\n",
-    "\n",
     "    record['filename'] = fname \n",
     "    \n",
     "    reader = PdfReader(os.path.join(folder, fname))\n",
     "    meta = reader.metadata\n",
-    "    # print(meta)\n",
-    "\n",
     "    pages = reader.pages\n",
     "\n",
     "    format = 0\n",
     "        \n",
+    "    # identify which format a document belongs to\n",
     "    first_page = pages[0].extract_text()\n",
     "    if first_page.find('For release on delivery') >= 0 or first_page.find('For release at') >= 0:\n",
     "        format = 1\n",
     "        pages = pages[1:]\n",
-    "        # print(first_page)\n",
     "        first_page = first_page.replace('\\n', '')\n",
     "\n",
-    "        # print(first_page)\n",
     "        record['date'] = re.search('\\w* [0-3]{0,1}[0-9]{1} ?, [0-9]{4}', first_page).group()\n",
     "        record['author'] = re.search('(?:[rR]emarks|Statement)?[ ]{1,2}by[ ]{1,3}([\\w]+ [\\w]. [\\w]+|[\\w]+ [\\w]+)[ ]{1,3}', first_page).groups()[0]\n",
     "\n",
@@ -70,10 +71,12 @@
     "        else:\n",
     "            record['title'] = None\n",
     "    elif 'Creator' in meta.keys() and 'PScript5' in meta['/Creator']:\n",
+    "        # Skip documents of this format, which have to be manually extracted\n",
     "        format = 2\n",
     "        record['title'] = None\n",
     "        record['date'] = None\n",
     "    else:\n",
+    "        # The remaining examples fit into the following format\n",
     "        split_title = meta['/Title'].split(':')\n",
     "        record['author'] = split_title[0]\n",
     "        record['date'] = re.search('[0-3]{0,1}[0-9]{1} \\w*[,]{0,1} [0-9]{3,4}|\\w+ [0-9]{1,2},? [0-9]{4}', meta['/Subject']).group()\n",
@@ -104,42 +107,33 @@
     "            text= re.sub('\\n', '', text)\n",
     "        combined_text = (combined_text + ' ' + text).strip()\n",
     "\n",
-    "    # print(combined_text)\n",
     "    record['text'] = combined_text\n",
     "\n",
     "    return record"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 274,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "r161220g.pdf\n",
-      "For release on delivery 1:30 p.m. EST  December 19, 2016         Commencement Remarks    by  Janet L. Yellen   Chair   Board of Governors of the Federal Reserve System  at  University of Baltimore 2016 Midyear Commencement    Baltimore, Maryland         December 19, 2016  \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'filename': 'r161220g.pdf',\n",
-       " 'date': 'December 19, 2016',\n",
-       " 'author': 'Janet L. Yellen',\n",
-       " 'title': 'Commencement remarks',\n",
-       " 'text': 'Thank you, President Schmoke, for this award and for the opportunity to be here today to offer my congratulations to the members of the Class of 2016.  I would also like to recognize the vital support students have received from family, friends, and others, many of whom are here to share this great occasion.   In a moment, I will explain why I am particularly proud and honored to be speaking to the new graduates of this university, but first I’d like to address students on a  topic that I expect is on the minds of many of you, which is the job market. The short version of what I have to say is that while I expect workers will continue to face some challenges in the coming years, I believe, for two reasons, that the job prospects and career opportunities for new graduates at this time  are very good.  First, after years of a slow economic recovery, you are entering the strongest job market in nearly a decade.  The unemployment rate, at 4.6 percent, is near what it was before the recession.  This is a level that has been associated with good job opportunities.  Job creation is continuing at a steady pace; the layoff rate is low; and job openings are up over the past couple years, which is another sign of a healthy job market.  There are also indications that wage growth is picking up, and weekly earnings for younger workers have made strong gains over the past couple of years.  That is probably one reason why younger workers reported feeling significantly more optimistic about the job market compared with 2013, according to a survey published just today by the Federal Reserve.   But it also looks like the economic gains of the past few years are finally raising living standards for most people.  Median household income grew and poverty fell significantly in 2015, although these measures were still lagging their levels from before the recession.An improving economy may be especially important for you, as new graduates.  Those who graduate and enter the workforce during a strong economy are more likely to find employment, remain employed, and enjoy persistently higher earnings.One explanation for the greater advantage in recent decades conferred by higher education is that it reflects an increase in the demand for educated workers compared   with others.  The drivers of this increasing demand for those with college and graduate degrees are likely to continue to be important.   Let me mention two of the most important factors.   First, technology.  For decades, technological advances have increasingly allowed simpler, repetitive tasks to be done more cheaply and safely by machines.  This kind of work in factories, stores, and offices often required only a high school education.  At the same time, technological advances have increased demand for workers with the education necessary to perform the ever-growing share of jobs where technology is important.  More recently, further advances are automating increasingly complex tasks and allowing workers with the ability and flexibility to use technology to be more productive.  Higher education has also changed in response, and one of the most important things many of you learned at the University of Baltimore was how to learn, adapt , and succeed in the technology-rich environment of most workplaces.   The second major development in the job market is globalization, which allows goods and services to be produced wherever it is most economical.  Offshoring and trade have profoundly affected the U.S. economy.  No one knows which jobs and which industries will thrive as globalization continues or how each of you will be affected, but I can say that the education you have earned will provide an important advantage.  Like technological change, globalization has reinforced the shift away from lower -skilled jobs that require less education to higher-skilled jobs that require college and advanced degrees.  The jobs that globalization creates in the United States, serving a global economy of billions of people, are more likely to be filled by those who, like you, have secured the advantage of higher education.   While globalization will likely continue and technology will continue to advance, we don’t know how fast the economy will grow, what new technologies will be developed, or how quickly and consistently employment will expand.  W hat is considerably more certain, however, is that success will continue to be tied to education, in part because a good education enhances one’s ability to adapt to a changing economy.  One reason for the increasing economic advantage of a college or graduate degree is the very slow growth of earnings in the last few decades for those with only a high school education.  It concerns me, as it should concern all of us, that many are falling behind.  Improvements in elementary and secondary education can help prepare more people for college and the opportunities college makes available, but for those who do not attend college, we must find other ways to extend economic opportunity to everyone in America.    In discussing higher education, you may have noticed that I have spoken in terms of completing your degrees.  Research shows that a large share of the benefits I have described from higher education comes only to those who graduate.  Even those completing three or more years of college benefit much less when they don’t get a degree.For example, some of you may be worried about paying off loans you have taken out to pay for your education.  The good news is that the vast majority of student borrowers who complete their degrees find work that allow s them to keep up with their payments and pay off their loans. Everything I have said so far could apply to the graduates this year of any college or university.  The rest of what I have to say is about you, the 2016 graduates of the   University of Baltimore.  I have learned a bit about you recently, with the help of the university’s staff.  Let me tell you a few things about some of your classmates that you may not know.     Among you today is a full-time student who found the time each semester to volunteer with non-profit organizations, including one that helps refugees from other countries find their place in this community.  Another of your fellow students, who used to doubt that she could ever afford college, has become a student leader .  She made the Dean’s List every semester after transferring from community college.  Like many of you, another of your fellow graduates took day and evening classes to balance work and family demands.  She was forced to change jobs to accommodate this schedule.  She later decided her future lay in digital communications, which required her to switch majors after taking some required classes.  Today she will become the first person in her family to graduate from college.    Some of you were born in other countries.  One of you lived in four other countries before coming to the University of Baltimore for a master ’s degree.  Many of you have contributed to the sense of community at the University of Baltimore by actively participating in student life.  One of you has even decided to seek a career helping other students as a student affairs professional. These are a few of the outstanding people who will join you in walking across this stage today.  Let me describe one more. To that student, sitting in the audience, I would say: you deserve a tremendous amount of credit.  Based on what I have learned, you did not have all of the advantages that can pave the way to college and graduate school.  You overcame obstacles to make it   here, and more obstacles to complete your degree.  One of the biggest of these obstacles , in fact, was that some people doubted you could or would succeed.  But other s in your life believed in you.  Some of them are here today.  They believed in you, and you believed in yourself, and your talent and intelligence and hard work enabled you to earn the degree you are about to receive.   If this sounds like you, then you are absolutely right, because I am not describing just one member of the University of Baltimore’s Class of 2016-- I am trying to describe every one of you.  In different ways, I expect all of you have overcome obstacles and demonstrated resilience and determination to succeed.  All of you have gained knowledge and used your intelligence and talents to complete your degrees.  As impressed as I am with any individual graduating today, I am more impressed with what all of you have achieved. Let me tell you what else I have learned.  More than the students of some colleges and universities, I know that many of you have deep roots in this city and in th e county.  Many of you will start careers, build your lives, and raise your families here.  The challenges you have overcome are the challenges faced by many people in Baltimore and in communities throughout America.  Your success, which we celebrate today, is also the promise of a brighter future for this city.  The degrees you have worked so hard to earn and the opportunities now opening up to you represent the stubborn, earnest hope that anyone and everyone who strives to succeed still can succeed.   And that is why I consider it a rare privilege to speak to you today, and a great honor to be associated with the University of Baltimore and the members of the Class of 2016.  Thank you, and congratulations.    References Altonji, Joseph G., Lisa B. Kahn, and Jamin D. Speer (2016).  “Cashier or Consultant?  Entry Labor Market Conditions, Field of Study, and Career S uccess,” Journal of Labor Economics, vol. 34 (S1), pp. S361-S401.  Bishaw, Alemayehu, and Brian Glassman (2016).  “Poverty:  2014 and 2015,” American Community Survey Briefs, ACSBR/15-01.  Washington:  U.S. Census Bureau, September, www.census.gov/content/dam/Census/library/publications/2016/demo/acsbr15-01.pdf.  Board of Governors of the Federal Reserve System (2016) .  Experiences and Perspectives of Young Workers.  Washington:  Board of Governors, December, https://www.federalreserve.gov/econresdata/2015-experiences-and-perspectives- of-young-workers-201612.pdf.  Bound, John, and Sarah E. Turner (2011).  “Dropouts and Diplomas:  The Divergence in Collegiate Outcomes,” in Eric A. Hanushek, Stephen J. Machin, and Ludger Woessmann, eds., Handbook of the Economics of Education, vol. 4.  Am sterdam:  North Holland, pp. 573-613.  Council of Economic Advisers (2016).  Investing in Higher Education:  Benefits, Challenges, and the State of Student Debt.  Washington:  Exec utive Office of the President of the United States, https://www.whitehouse.gov/sites/default/files/page/files/20160718_cea_student_debt.pdf.   Kahn, Lisa B. (2010).  “The Long-Term Labor Market Consequences of Graduating from College in a Bad Economy,” Labour Economics, vol. 17 (2), pp. 303-16.  Oreopoulos, Philip, and Uros Petronijevic (2013).  “Making College Worth It:  A Review of the Returns to Higher Education,” Future of Children, vol . 23 (Spring), pp. 41- 65.  Oreopoulos, Philip, and Kjell G. Salvanes (2011).  “Priceless:  The Nonpecuniary Benefits of Schooling,” Journal of Economic Perspectives, vol. 25 (Winter), pp. 159-84.  Oreopoulos, Philip, Till von Wachter, and Andrew Heisz (2012).  “The S hort- and Long- Term Career Effects of Graduating in a Recession,” American Economic Journal:  Applied Economics, vol. 4 (1), pp. 1-29.   Pew Research Center (2014).  The Rising Cost of Not Going to College.  Washington:  PRC, February, www.pewsocialtrends.org/files/2014/02/SDT -higher-ed-FINAL- 02-11-2014.pdf.   Posey, Kirby G. (2016).  “Household Income:  2015,” American Community Survey Briefs, ACSBR/15-02.  Washington:  U.S. Census Bureau, September, www.census.gov/content/dam/Census/library/publications/2016/demo/acsbr15-02.pdf.'}"
-      ]
-     },
-     "execution_count": 274,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "extract_data_from_pdf('r161220g.pdf')"
+    "I identified some anamolies, which I exclude from this process and just extract information from manually given how few there are."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "problem = ['r220509b.pdf', 'r220615g.pdf', 'r210114b.pdf', 'r211128e.pdf', 'r161003a.pdf', 'r221128l.pdf']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I then create an array of entries to form a dataframe."
    ]
   },
   {
@@ -177,6 +171,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here I fix a few typos that messed up date parsing, and then parse the date and save the file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 292,
    "metadata": {},
@@ -184,7 +185,6 @@
    "source": [
     "df['author'].value_counts()\n",
     "\n",
-    "# df['date'] = pd.to_datetime(df['date'])\n",
     "df['date'].fillna('',inplace=True)\n",
     "\n",
     "df[(df['date'] == '') | (df['date'].str.contains('Mach'))]\n",
@@ -194,54 +194,33 @@
     "df.loc[df['filename'] == 'r171020g.pdf', 'date'] = '18 October 2017' #mistyped date\n",
     "df.loc[1177, 'date'] = 'June 17, 2022'\n",
     "\n",
-    "# df[(df['date'] == '') | (df['date'].str.contains('Mach'))]\n",
-    "\n",
     "df['date'] = pd.to_datetime(df['date'], format='mixed')\n",
     "\n",
-    "df.to_csv('test.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 237,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anomolies = ['r200924e.pdf', 'r170726d.pdf', 'r170307e.pdf', 'r180508b.pdf',  'r171020g.pdf', 'r100608a.pdf', 'r210302e.pdf', 'r210303b.pdf', 'r180424c.pdf', 'r210323b.pdf', 'r170705a.pdf', 'r100609f.pdf']\n",
-    "\n",
-    "problem = ['r220509b.pdf', 'r220615g.pdf', 'r210114b.pdf', 'r211128e.pdf', 'r161003a.pdf', 'r221128l.pdf']\n",
-    "len(anomolies) + len(problem)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for file in anomolies:\n",
-    "    test = extract_data_from_pdf(file)\n",
-    "    # print(test)\n",
-    "    print(test['title'])\n",
-    "    print(test['author'])"
+    "df.to_csv('speeches.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Headers, deal with \"problem\" items, blog post"
+    "Finally, I combine the documents that I systematically extracted information from with those that I had to manually extract information from, and then save the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "manual = pd.read_csv('manual.csv')\n",
+    "df = pd.read_csv('speeches.csv', index_col=0)\n",
+    "df = pd.concat([df,manual], ignore_index=True)\n",
+    "\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "\n",
+    "df.to_csv('all_speeches.csv')\n"
    ]
   }
  ],
