Added some comments, way to create speaker-meeting observations

--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preparation For Topic Modelling\n",
+    "\n",
+    "Eventually to include tf-idf threshold"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,43 +23,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "sdf = pd.read_csv('transcripts/speeches.csv')\n",
-    "tdf = pd.read_csv('transcripts/transcripts.csv', index_col=0)"
+    "tdf = pd.read_csv('transcripts/transcripts.csv', index_col=0)\n",
+    "\n",
+    "# Quick fix, to be removed after the next full extract from the transcripts\n",
+    "tdf.loc[36151, 'content'] = ''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A function to eliminate utterances less than 5 words long. Not currently sure if I will use this. I would if I was replicating Shapiro Wilson 2021, but that is no longer the plan. Keeping it around for now."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def long_enough(text):\n",
     "    cleaned_tokens = [token for token in word_tokenize(str(text)) if token not in string.punctuation]\n",
     "    if len(cleaned_tokens) < 5:\n",
     "        return False\n",
-    "    return True\n",
-    "\n",
-    "long_enough('Questions? President Kocherlakota.')"
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +73,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another idea from Shapiro and Wilson, which I don't know if I will use. The idea is to remove \"stand alone utterances\" where the speakers of the utterances before and after is different. In practice, I don't know how useful this is. It is possible I am misinterpreting their meaning. Either way, for now I am not using this but I'm leaving it around for now."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,19 +102,15 @@
     "    print(curr_speaker)\n",
     "    print(next_speaker)\n",
     "\n",
-    "\n",
-    "\n",
     "    if curr_speaker != prev_speaker and curr_speaker != next_speaker and prev_speaker != next_speaker:\n",
     "        print('get rid')\n",
     "        return False\n",
-    "    return True\n",
-    "\n",
-    "# check_bef_aft_speakers(2)"
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,38 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "37010\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "test\n",
-       "False    18902\n",
-       "True     18108\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# print(len(tdf_filtered))\n",
-    "# tdf_filtered['test'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +148,6 @@
        "      <th>index</th>\n",
        "      <th>date</th>\n",
        "      <th>type</th>\n",
-       "      <th>test</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -181,7 +158,6 @@
        "      <td>0</td>\n",
        "      <td>2015-03-18</td>\n",
        "      <td>meeting</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -190,7 +166,6 @@
        "      <td>2</td>\n",
        "      <td>2015-03-18</td>\n",
        "      <td>meeting</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -199,7 +174,6 @@
        "      <td>3</td>\n",
        "      <td>2015-03-18</td>\n",
        "      <td>meeting</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -208,7 +182,6 @@
        "      <td>5</td>\n",
        "      <td>2015-03-18</td>\n",
        "      <td>meeting</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -217,11 +190,9 @@
        "      <td>6</td>\n",
        "      <td>2015-03-18</td>\n",
        "      <td>meeting</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -235,7 +206,6 @@
        "      <td>373</td>\n",
        "      <td>2012-03-13</td>\n",
        "      <td>meeting</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37006</th>\n",
@@ -244,7 +214,6 @@
        "      <td>374</td>\n",
        "      <td>2012-03-13</td>\n",
        "      <td>meeting</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37007</th>\n",
@@ -253,7 +222,6 @@
        "      <td>375</td>\n",
        "      <td>2012-03-13</td>\n",
        "      <td>meeting</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37008</th>\n",
@@ -262,7 +230,6 @@
        "      <td>377</td>\n",
        "      <td>2012-03-13</td>\n",
        "      <td>meeting</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37009</th>\n",
@@ -271,11 +238,10 @@
        "      <td>379</td>\n",
        "      <td>2012-03-13</td>\n",
        "      <td>meeting</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>37010 rows × 6 columns</p>\n",
+       "<p>37010 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -292,146 +258,29 @@
        "37008  CHAIRMAN BERNANKE.  And I was very clear that that is certainly no...   \n",
        "37009  CHAIRMAN BERNANKE.  Okay.  Thank you, all.  The next meeting will ...   \n",
        "\n",
-       "       index        date     type   test  \n",
-       "0          0  2015-03-18  meeting   True  \n",
-       "1          2  2015-03-18  meeting   True  \n",
-       "2          3  2015-03-18  meeting  False  \n",
-       "3          5  2015-03-18  meeting   True  \n",
-       "4          6  2015-03-18  meeting  False  \n",
-       "...      ...         ...      ...    ...  \n",
-       "37005    373  2012-03-13  meeting  False  \n",
-       "37006    374  2012-03-13  meeting   True  \n",
-       "37007    375  2012-03-13  meeting   True  \n",
-       "37008    377  2012-03-13  meeting   True  \n",
-       "37009    379  2012-03-13  meeting  False  \n",
+       "       index        date     type  \n",
+       "0          0  2015-03-18  meeting  \n",
+       "1          2  2015-03-18  meeting  \n",
+       "2          3  2015-03-18  meeting  \n",
+       "3          5  2015-03-18  meeting  \n",
+       "4          6  2015-03-18  meeting  \n",
+       "...      ...         ...      ...  \n",
+       "37005    373  2012-03-13  meeting  \n",
+       "37006    374  2012-03-13  meeting  \n",
+       "37007    375  2012-03-13  meeting  \n",
+       "37008    377  2012-03-13  meeting  \n",
+       "37009    379  2012-03-13  meeting  \n",
        "\n",
-       "[37010 rows x 6 columns]"
+       "[37010 rows x 5 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tdf_filtered"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>test</th>\n",
-       "      <th>content</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>True</td>\n",
-       "      <td>Good morning, everybody.  As you know, we had ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>True</td>\n",
-       "      <td>So moved, Madam Chair.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>Thank you.  Without objection.  I am going to ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>True</td>\n",
-       "      <td>Thank you, Madam Chair. We will be splitting t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>False</td>\n",
-       "      <td>Questions?  President Kocherlakota.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48757</th>\n",
-       "      <td>True</td>\n",
-       "      <td>Well, I asked for discussion of that point tod...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48758</th>\n",
-       "      <td>True</td>\n",
-       "      <td>Right.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48759</th>\n",
-       "      <td>True</td>\n",
-       "      <td>And I was very clear that that is certainly no...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48760</th>\n",
-       "      <td>True</td>\n",
-       "      <td>Okay.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48761</th>\n",
-       "      <td>True</td>\n",
-       "      <td>Okay.  Thank you, all.  The next meeting will ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>48762 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        test                                            content\n",
-       "0       True  Good morning, everybody.  As you know, we had ...\n",
-       "1       True                             So moved, Madam Chair.\n",
-       "2      False  Thank you.  Without objection.  I am going to ...\n",
-       "3       True  Thank you, Madam Chair. We will be splitting t...\n",
-       "4      False                Questions?  President Kocherlakota.\n",
-       "...      ...                                                ...\n",
-       "48757   True  Well, I asked for discussion of that point tod...\n",
-       "48758   True                                             Right.\n",
-       "48759   True  And I was very clear that that is certainly no...\n",
-       "48760   True                                              Okay.\n",
-       "48761   True  Okay.  Thank you, all.  The next meeting will ...\n",
-       "\n",
-       "[48762 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tdf[['test', 'content']]"
    ]
   },
   {
@@ -458,10 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Filter transcripts like Shapiro Wilson (2021)\n",
-    "\n",
-    "- Drop utterances of less than 5 words\n",
-    "- Drop utterances surrounded by utterances of different speakers"
+    "## Bi and Trigram enhancements"
    ]
   },
   {
@@ -535,6 +381,91 @@
    "outputs": [],
    "source": [
     "sdf.to_csv('speeches_enhanced.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Speaker-Meeting observations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extract = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func(args):\n",
+    "    return ' '.join(args)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "36151\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, row in tdf.iterrows():\n",
+    "    if not isinstance(row['content'], str):\n",
+    "        print(row['content'])\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "speaker_grouped = tdf.groupby(['date', 'speaker'])['content'].agg(func).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "speaker_grouped.to_csv('speaker_grouped.csv')"
    ]
   }
  ],
