Some more work on topic modelling

--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,26 +284,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tdf.loc[0]['index']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -392,76 +372,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "extract = 1"
+    "tdf_e = pd.read_csv('transcripts_enhanced.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def func(args):\n",
-    "    return ' '.join(args)\n"
+    "speaker_grouped = tdf.groupby(['date', 'speaker'])['content'].agg(' '.join).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nan\n",
-      "36151\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, row in tdf.iterrows():\n",
-    "    if not isinstance(row['content'], str):\n",
-    "        print(row['content'])\n",
-    "        print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "extract"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "speaker_grouped = tdf.groupby(['date', 'speaker'])['content'].agg(func).reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
