removed old quickfix, filtered out non-meeting observations

--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,15 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "sdf = pd.read_csv('transcripts/speeches.csv')\n",
-    "tdf = pd.read_csv('transcripts/transcripts.csv', index_col=0)\n",
-    "\n",
-    "# Quick fix, to be removed after the next full extract from the transcripts\n",
-    "tdf.loc[36151, 'content'] = ''"
+    "tdf = pd.read_csv('transcripts/transcripts.csv', index_col=0)"
    ]
   },
   {
@@ -292,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,17 +334,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdf['text_enhanced'] = sdf['text'].apply(ngram_enhance)\n",
+    "# sdf['text_enhanced'] = sdf['text'].apply(ngram_enhance)\n",
     "tdf['text_enhanced'] = tdf['content'].apply(ngram_enhance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdf.to_csv('speeches_enhanced.csv')"
+    "# sdf.to_csv('speeches_enhanced.csv')"
    ]
   },
   {
@@ -372,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +378,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "meeting     86326\n",
+       "confcall     4383\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tdf_e['type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tdf_e = tdf_e[tdf_e['type'] == 'meeting']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
