Adjusted files to use a new folder to store all intermediate step csvs

--- a/grouped_cleaning.ipynb
+++ b/grouped_cleaning.ipynb
@@ -157,7 +157,7 @@
     }
    ],
    "source": [
-    "tdf = pd.read_csv('speaker_grouped.csv', index_col=0)\n",
+    "tdf = pd.read_csv('working-csvs/speaker_grouped.csv', index_col=0)\n",
     "tdf = tdf[pd.to_datetime(tdf['date']).dt.year >= 1994]\n",
     "tdf"
    ]
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tdf.to_csv('speaker_grouped_trimmed.csv')"
+    "tdf.to_csv('working-csvs/speaker_grouped_trimmed.csv')"
    ]
   }
  ],
