--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -32,8 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdf = pd.read_csv('transcripts/speeches.csv')\n",
-    "tdf = pd.read_csv('transcripts/transcripts.csv', index_col=0)"
+    "# sdf = pd.read_csv('transcripts/speeches.csv')\n",
+    "tdf = pd.read_csv('working-csvs/raw_transcripts.csv', index_col=0)"
    ]
   },
   {
@@ -353,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tdf.to_csv('transcripts_enhanced.csv')"
+    "tdf.to_csv('working-csvs/transcripts_enhanced.csv')"
    ]
   },
   {
@@ -378,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tdf_e = pd.read_csv('transcripts_enhanced.csv')"
+    "tdf_e = pd.read_csv('working-csvs/transcripts_enhanced.csv')"
    ]
   },
   {
@@ -652,7 +652,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "speaker_grouped.to_csv('speaker_grouped.csv')"
+    "speaker_grouped.to_csv('working-csvs/speaker_grouped.csv')"
    ]
   }
  ],
