--- a/topic_cyclicality.ipynb
+++ b/topic_cyclicality.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tdf = pd.read_csv('grouped_w_topics.csv', index_col=0)"
+    "tdf = pd.read_csv('working-csvs/grouped_w_topics.csv', index_col=0)"
    ]
   },
   {
