--- a/fomc-membership/fomc_member_process.ipynb
+++ b/fomc-membership/fomc_member_process.ipynb
@@ -444,7 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smdf = pd.read_csv('../grouped_w_topics.csv', index_col=0)[['date', 'speaker']]"
+    "smdf = pd.read_csv('../working-csvs/grouped_w_topics.csv', index_col=0)[['date', 'speaker']]"
    ]
   },
   {
@@ -524,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tdf = pd.read_csv('../grouped_w_topics.csv', index_col=0)"
+    "tdf = pd.read_csv('../working-csvs/grouped_w_topics.csv', index_col=0)"
    ]
   },
   {
