--- a/topic_modelling.ipynb
+++ b/topic_modelling.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tdf_g = pd.read_csv('speaker_grouped_trimmed.csv', index_col=0)"
+    "tdf_g = pd.read_csv('working-csvs/speaker_grouped_trimmed.csv', index_col=0)"
    ]
   },
   {
@@ -466,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tdf_g.to_csv('grouped_w_topics.csv')"
+    "tdf_g.to_csv('working-csvs/grouped_w_topics.csv')"
    ]
   }
  ],
