Moved common ngram identifier to its own folder

--- a/ngrams/common_ngrams.ipynb
+++ b/ngrams/common_ngrams.ipynb
@@ -29,8 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdf = pd.read_csv('transcripts/speeches.csv')\n",
-    "tdf = pd.read_csv('transcripts/transcripts.csv')"
+    "# sdf = pd.read_csv('transcripts/speeches.csv')\n",
+    "tdf = pd.read_csv('../working-csvs/raw_transcripts.csv')"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdf['tokens'] = sdf['text'].apply(lambda x : word_tokenize(str(x)))"
+    "# sdf['tokens'] = sdf['text'].apply(lambda x : word_tokenize(str(x)))"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join('ngrams', 'bigrams'), 'w') as bg_file:\n",
+    "with open('bigrams', 'w') as bg_file:\n",
     "    for bg in relevant_bigrams:\n",
     "        bg_file.write(bg + '\\n')"
    ]
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join('ngrams', 'trigrams'), 'w') as tg_file:\n",
+    "with open('trigrams', 'w') as tg_file:\n",
     "    for tf in relevant_trigrams:\n",
     "        tg_file.write(tf + '\\n')"
    ]
