Added some interesting stats on the longest serving FOMC member

--- a/fomc-membership/fomc_member_process.ipynb
+++ b/fomc-membership/fomc_member_process.ipynb
@@ -1028,6 +1028,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tdf[tdf['date'].apply(lambda x : int(x.split('-')[0]) >= 1986) & tdf['date'].apply(lambda x : int(x.split('-')[0]) <= 2009)]['lname'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tdf['lname'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
