Added section to create a df of fomc members at each meeting and whether they can vote

--- a/fomc-membership/fomc_member_process.ipynb
+++ b/fomc-membership/fomc_member_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,24 +63,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'kugler': [[datetime.datetime(2023, 9, 13, 0, 0),\n",
-       "   datetime.datetime(2023, 12, 13, 9, 22, 47, 687985)]],\n",
+       "   datetime.datetime(2024, 2, 11, 9, 30, 59, 890695)]],\n",
        " 'barr': [[datetime.datetime(2022, 7, 19, 0, 0),\n",
-       "   datetime.datetime(2023, 12, 13, 9, 22, 47, 688152)]],\n",
+       "   datetime.datetime(2024, 2, 11, 9, 30, 59, 890996)]],\n",
        " 'jefferson': [[datetime.datetime(2022, 5, 23, 0, 0),\n",
-       "   datetime.datetime(2023, 12, 13, 9, 22, 47, 688259)]],\n",
+       "   datetime.datetime(2024, 2, 11, 9, 30, 59, 891201)]],\n",
        " 'cook': [[datetime.datetime(2022, 5, 23, 0, 0),\n",
-       "   datetime.datetime(2023, 12, 13, 9, 22, 47, 688354)]],\n",
+       "   datetime.datetime(2024, 2, 11, 9, 30, 59, 891368)]],\n",
        " 'waller': [[datetime.datetime(2020, 12, 18, 0, 0),\n",
-       "   datetime.datetime(2023, 12, 13, 9, 22, 47, 688435)]],\n",
+       "   datetime.datetime(2024, 2, 11, 9, 30, 59, 891525)]],\n",
        " 'bowman': [[datetime.datetime(2018, 11, 26, 0, 0),\n",
-       "   datetime.datetime(2023, 12, 13, 9, 22, 47, 688513)]],\n",
+       "   datetime.datetime(2024, 2, 11, 9, 30, 59, 891677)]],\n",
        " 'clarida': [[datetime.datetime(2018, 9, 17, 0, 0),\n",
        "   datetime.datetime(2022, 1, 14, 0, 0)]],\n",
        " 'quarles': [[datetime.datetime(2017, 9, 17, 0, 0),\n",
@@ -92,7 +92,7 @@
        " 'stein': [[datetime.datetime(2012, 5, 30, 0, 0),\n",
        "   datetime.datetime(2014, 5, 28, 0, 0)]],\n",
        " 'powell': [[datetime.datetime(2012, 5, 25, 0, 0),\n",
-       "   datetime.datetime(2023, 12, 13, 9, 22, 47, 688936)]],\n",
+       "   datetime.datetime(2024, 2, 11, 9, 30, 59, 892535)]],\n",
        " 'raskin': [[datetime.datetime(2010, 10, 4, 0, 0),\n",
        "   datetime.datetime(2014, 3, 13, 0, 0)]],\n",
        " 'tarullo': [[datetime.datetime(2009, 1, 28, 0, 0),\n",
@@ -141,7 +141,7 @@
        "   datetime.datetime(2001, 1, 31, 0, 0)]]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "4  Anthony M. Solomon  New York  04/01/1980  01-01-1985      0.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "4  Anthony M. Solomon  New York  04/01/1980  01-01-1985      0.0    solomon"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "['St. Louis', 'Boston', 'Cleveland', 'Kansas City', 'New York']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        " 'yellen']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,12 +505,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_fomc(date):\n",
     "    return [get_pres(region, date) for region in regions] + get_bog(date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = pd.read_csv('../working-csvs/raw_transcripts_sectioned.csv')['date'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "records = []\n",
+    "\n",
+    "for date in dates:\n",
+    "    year = int(date.split('-')[0])\n",
+    "    # print(year)\n",
+    "    voting_regions = set(which_bank_votes(year))\n",
+    "    nonvoting_regions = set(regions) - set(voting_regions)\n",
+    "    # print(voting_regions)\n",
+    "    # print(nonvoting_regions)\n",
+    "    voting_members = [get_pres(region, date) for region in voting_regions] + get_bog(date)\n",
+    "    for member in voting_members:\n",
+    "        records.append({'date': date, 'member': member, 'voter': 1})\n",
+    "    nonvoting_members = [get_pres(region, date) for region in nonvoting_regions]\n",
+    "    for member in nonvoting_members:\n",
+    "        records.append({'date': date, 'member': member, 'voter': 0})\n",
+    "\n",
+    "records\n",
+    "\n",
+    "pd.DataFrame.from_records(records).to_csv('../working-csvs/fomc.csv')"
    ]
   },
   {
