Updated dropbox syncing for csvs

--- a/dropbox_sync_csvs.ipynb
+++ b/dropbox_sync_csvs.ipynb
@@ -1,13 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CSV Syncing\n",
+    "\n",
+    "This file is a little utility to sync my csvs (which are not tracked by version control because they are rather large) to my Dropbox since some of them would be a pain to recreate."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import shutil"
+    "import shutil\n",
+    "from datetime import date"
    ]
   },
   {
@@ -16,27 +26,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dest_dir = '/home/bdurham/Dropbox/Honors Thesis/csvs'"
+    "dest_dir = f'/home/bdurham/Dropbox/Honors Thesis/csvs/csvs-{date.today()}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, make a folder for today"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exists altready\n"
+     ]
+    }
+   ],
+   "source": [
+    "if not os.path.exists(dest_dir):\n",
+    "    print(\"Doesn't exist\")\n",
+    "    os.mkdir(dest_dir)\n",
+    "else:\n",
+    "    print(\"Exists altready\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "csvs_to_sync = ['transcripts_enhanced', 'speeches_enhanced',\n",
-    "                'fomc_members', *[os.path.join('transcripts', file) for file in ['speeches', 'transcripts', 'transcripts_sents', 'speech_sents']]]"
+    "csvs_to_sync = os.listdir('working-csvs')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Copy files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "for file in csvs_to_sync:\n",
-    "    shutil.copy2(file + '.csv', dest_dir)"
+    "    shutil.copy2(os.path.join('working-csvs', file), dest_dir)"
    ]
   }
  ],
